# e-commerce-by-jules

./: .env.example  .gitignore  COMMENTING_STRATEGY.md  LICENSE  docker-compose.yml  mcp-config.json  render.yaml
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ac831b562b49_initial_migration.py  b1a2c3d4e5f6_add_order_number_sequence.py
backend/app/: main.py
backend/app/api/v1/: deps.py
backend/app/api/v1/routers/: admin.py  auth.py  carts.py  orders.py  products.py  reviews.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/mcp/: server.py
backend/app/models/: auth.py  cart.py  catalog.py  coupon.py  order.py  payment.py  review.py  user.py
backend/app/schemas/: auth.py  cart.py  catalog.py  order.py
backend/app/services/: auth_service.py  cart_service.py  catalog_service.py  order_service.py
backend/tests/: test_auth_registration_fix.py  test_cors.py  test_security.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: auth.js  client.js  orders.js  products.js
frontend/src/components/layout/: AppShell.jsx
frontend/src/components/ui/: ProductCard.jsx  ProductCard.test.jsx
frontend/src/features/account/: Account.jsx
frontend/src/features/auth/: Auth.jsx
frontend/src/features/cart/: Cart.jsx
frontend/src/features/catalog/: Catalog.jsx
