[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ecommerce-backend"
version = "0.1.0"
description = "FastAPI backend for a full-stack e-commerce platform."
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.30.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.9",
  "pwdlib[argon2]>=0.3",
  "PyJWT>=2.10",
  "email-validator>=2.2",
  "httpx>=0.27",
  "mcp[fastmcp]"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-PyJWT>=1.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = []

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-asyncio", "ruff", "mypy"]
